<resources>
    <string name="app_name">UniTap</string>

    <!-- Navigation Pane -->
    <!-- Top Label -->
    <string name="nav_top_label">UniTap</string>
    <string name="wallet_owner">Please Login</string>
    <!-- Main NavPane Labels -->
    <string name="nav_wallet">Wallet</string>
    <string name="nav_testingNDEF">Testing NDEF</string>
    <string name="nav_testingHCE">Testing HCE</string>
    <string name="nav_loginout">Log In</string>
    <string name="nav_settings">Settings</string>
    <!-- Secondary NavPane Labels -->
    <string name="nav_begging">Please Tell People About Us!</string>
    <string name="nav_share">Share on Social Media</string>
    <string name="nav_about_us">About Us</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_navigation_pane">NavigationPane</string>
    <string name="title_activity_wallet">Wallet</string>


    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string-array name="card_options">
        <item>Edit</item>
        <item>Delete</item>
    </string-array>
    <string-array name="setting_options">
        <item>Light</item>
        <item>Dark</item>
        <item>Normal</item>
    </string-array>
    <string-array name="setting_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <!-- added back because it crashed-->
    <string name="title_activity_card_adder">CardAdder</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_card">CardActivity</string>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- Example settings for Data & Sync -->

    <!--
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>
    -->

    <!-- Example settings for Notifications -->
    <!--
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    -->


</resources>
