<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_wallet" android:icon="@android:drawable/ic_menu_manage" android:title="@string/nav_wallet" />
        <item android:id="@+id/nav_testHCE" android:icon="@android:drawable/ic_menu_always_landscape_portrait" android:title="@string/nav_testingHCE" />
        <item android:id="@+id/nav_loginout" android:icon="@android:drawable/ic_menu_slideshow" android:title="@string/nav_loginout" />
        <item android:id="@+id/nav_settings" android:icon="@android:drawable/ic_menu_preferences" android:title="@string/nav_settings" />
    </group>

    <item android:title="@string/nav_begging">
        <menu>
            <item android:id="@+id/nav_share" android:icon="@android:drawable/ic_menu_share"
                android:title="@string/nav_share" />
            <item android:id="@+id/nav_about" android:icon="@android:drawable/ic_menu_send"
                android:title="@string/nav_about_us" />
        </menu>
    </item>

</menu>